# llmops

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  llama_to_onnx.py  locust_test.py  main.py  original_flask.py  pyproject.toml  requirements.txt  summary_serv.py
app/: depend.py
app/dto/: __init__.py  summary.py  translate.py  tt.py
app/enum/: domain.py  transcript.py
app/logger/: __init__.py
app/router/: __init__.py  demo.py  summary.py  translation.py
app/router/descriptions/: summary_description.py  translate_description.py
app/src/: _base.py  anthropic.py  engine.py  open_ai.py
app/src/const/: prompt.py  select_domain.py
app/src/service/: _base.py  anthropic.py  engine.py  open_ai.py
app/src/setting/: middelware.py
app/utils/: text_process.py
convert/: unsloth_convert.py
inferentia/: Dockerfile  deploy.py  docker-compose.yaml  docker_clean  neuron_requirements.txt  neuron_server.py  pyproject.toml  requirements.txt
pages/: vuno.py
serving_test/: batch.py  batched_llm.py  locust_test.py  sllm_test.py  streamlit_page.py  testneuron.py  testnueorn.py  testnueron.py
serving_test/batch/: batch.py  testneuron.py
serving_test/convert/: llama_to_onnx.py
serving_test/legacy/: ray_serv.py
serving_test/pages/: translation_test.py
serving_test/stress_test/: locust_test.py
src/: depend.py
src/application/: anthropic.py  engine.py  open_ai.py
src/application/const/: prompt.py
src/dto/: translate.py
src/router/: demo.py  summary.py  translation.py
src/utils/: text_process.py
summary/: depend.py
summary/application/: __init__.py  anthropic.py  engine.py  open_ai.py
summary/application/const/: __init__.py  prompt.py
summary/dto/: __init__.py  summary.py  transcript.py  translate.py
summary/enum/: transcript.py
summary/logger/: __init__.py  log.ini
summary/utils/: lang_detect.py
